Offload command creation from the tree to the Header